Create User and Visibility attributes for Task

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -26,6 +26,10 @@
     <%= form.text_field :status %>
   </div>
 
+  <%= form.select :visibility, Task.visibilities.keys.map { |k| [k.humanize, k] } %>
+
+  <%= form.hidden_field :user_id %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
