--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @tasks.each do |task| %>
+    <% @public_tasks.each do |task| %>
       <tr>
         <td><%= task.name %></td>
         <td><%= task.description %></td>
