Separate ToDo and Done Lists of the User

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -25,23 +25,50 @@
 <% if user_signed_in? %>
   <h1>My Tasks</h1>
 
+  <h2>TODO List</h2>
   <table>
     <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Status</th>
-      <th>Visibility</th>
       <th colspan="3"></th>
     </tr>
     </thead>
 
     <tbody>
-    <% @my_tasks.each do |task| %>
+    <% @my_tasks.where(status: 'TODO').each do |task| %>
       <tr>
         <td><%= task.name %></td>
         <td><%= task.description %></td>
-        <td><%= task.status %></td>
+        <td><%= task.visibility %></td>
+
+        <td><%= link_to 'Show', task %></td>
+        <% if can? :update, task %>
+          <td><%= link_to 'Edit', edit_task_path(task) %></td>
+        <% end %>
+        <% if can? :destroy, task %>
+          <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+
+  <h2>DONE List</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th colspan="3"></th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <% @my_tasks.where(status: 'DONE').each do |task| %>
+      <tr>
+        <td><%= task.name %></td>
+        <td><%= task.description %></td>
         <td><%= task.visibility %></td>
 
         <td><%= link_to 'Show', task %></td>
