--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,9 @@
-<h2>Sign up</h2>
+<div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="col-md-3.4">
+    <div class="card p-4">
+      <h2 class="text-center mb-4">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -27,3 +30,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
+
