--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TaskManager</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<div class="card">
+  <div class="card-body">
+    <head>
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <%= csrf_meta_tags %>
+      <%= csp_meta_tag %>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <body>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black; height: 100px;">
+      <div class="container d-flex justify-content-between align-items-center">
+        <%= link_to root_path, class: "navbar-brand" do %>
+          <h1>Task Manager</h1>
+        <% end %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <li class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <% if user_signed_in? %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+              <li class="nav-item">
+                <p class="nav-link text-white">Welcome <%= current_user.email %></p>
+              </li>
+              <li class="nav-item mx-2">
+                <%= link_to 'Home', root_path, class: "btn btn-outline-success", style: "background-color: green; color: white;", onmouseover: "this.style.backgroundColor='purple'", onmouseout: "this.style.backgroundColor='green'" %>
+              </li>
+              <li class="nav-item mx-2">
+                <%= link_to 'Edit profile', edit_user_registration_path, class: "btn btn-outline-success", style: "background-color: green; color: white;", onmouseover: "this.style.backgroundColor='purple'", onmouseout: "this.style.backgroundColor='green'" %>
+              </li>
+              <li class="nav-item mx-2">
+                <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-success", style: "background-color: green; color: white;", onmouseover: "this.style.backgroundColor='purple'", onmouseout: "this.style.backgroundColor='green'" %>
+              </li>
+
+              <li class="nav-item mx-2">
+                <% if can? :create, Task %>
+                <li class="nav-item mx-2">
+                  <%= link_to 'New Task', new_task_path, class: 'btn btn-outline-success', style: 'background-color: blue; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='blue';", data: { bs_toggle: 'modal', bs_target: '#newTaskModal' } ,remote: true %>
+                </li>
+              <%end %>
+              </li>
+            <% else %>
+              <li class="nav-item mx-2">
+                <%= link_to "Login", new_user_session_path, class: 'btn btn-outline-success', style: "background-color: green; color: white;", onmouseover: "this.style.backgroundColor='purple'", onmouseout: "this.style.backgroundColor='green'" %>
+              </li>
+            <% end %>
+          </ul>
+      </div>
+
+    </nav>
 
 
-    <% if user_signed_in? %>
-      <div> Welcome <%= current_user.email %> </div>
-      <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= button_to "Sign in", new_user_session_path %>
-    <% end %>
-  </head>
-
-  <body>
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-  <%= yield %>
-  </body>
+    <div class="container my-3">
+      <%= yield %>
+    </div>
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js' %>
+    </body>
+  </div>
+</div>
 </html>
+
+
+
