--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing Task</h1>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-5">
+      <div class="card">
+        <div class="card-body">
+          <h1>Editing Task</h1>
 
-<%= render 'form', task: @task %>
+          <%= render 'form', task: @task %>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+          <td><%= link_to 'Show', @task, class: 'btn btn-outline-success', style: 'background-color: purple; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='purple';" %></td>
+          <td><%= link_to 'Back',tasks_path, class: 'btn btn-outline-success', style: 'background-color: blue; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='blue';" %></td>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
