--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,90 +1,194 @@
-<h1>Public Tasks</h1>
-
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Status</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @public_tasks.each do |task| %>
-    <tr>
-      <td><%= task.name %></td>
-      <td><%= task.description %></td>
-      <td><%= task.status %></td>
-      <!-- Add links or actions for public tasks as needed -->
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-
 <% if user_signed_in? %>
-  <h1>My Tasks</h1>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <div class="card-body text-center">
+              <div class="card">
+                <h3 class="card-title mt-4"><div class="card"> <div class="red-background">Public Tasks</div></div></h3>
+              </div>
+              <table class="table">
+                <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Status</th>
+                </tr>
+                </thead>
+                <tbody>
+                <% @public_tasks.each do |task| %>
+                  <tr>
+                    <td><%= task.name %></td>
+                    <td><%= task.description %></td>
+                    <td><%= task.status %></td>
+                  </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-body text-center">
+            <div class="card">
+              <h3 class="card-title mt-4"><div class="card"> <div class="re-background">ToDo List</div></div></h3>
+            </div>
+            <table class="table">
 
-  <h2>TODO List</h2>
-  <table>
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-    </thead>
+              <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Visibility</th>
+                <th colspan="3"></th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @my_tasks.where(status: 'TODO').each do |task| %>
+                <tr>
+                  <td><%= task.name %></td>
+                  <td><%= task.description %></td>
+                  <td><%= task.visibility %></td>
+                  <td><%= link_to 'Show', task, class: 'btn btn-outline-success', style: 'background-color: purple; color: white;', onmouseover: "this.style.backgroundColor='green';", onmouseout: "this.style.backgroundColor='purple';" %></td>
+                  <% if can? :update, task %>
+                    <td><%= link_to 'Edit', edit_task_path(task), class: 'btn btn-outline-success', style: 'background-color: blue; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='blue';" %></td>
+                  <% end %>
+                  <% if can? :destroy, task %>
+                    <td><%= button_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-success', style: 'background-color: red; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='red';" %></td>
+                  <% end %>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
 
-    <tbody>
-    <% @my_tasks.where(status: 'TODO').each do |task| %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= task.visibility %></td>
+        <br>
 
-        <td><%= link_to 'Show', task %></td>
-        <% if can? :update, task %>
-          <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <% end %>
-        <% if can? :destroy, task %>
-          <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
+        <div class="card">
+          <div class="card-body text-center">
+            <div class="card">
+              <h3 class="card-title mt-4"><div class="card"> <div class="green-background">Done List</div></div></h3>
+            </div>
+            <table class="table">
+              <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Visibility</th>
+                <th colspan="3"></th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @my_tasks.where(status: 'DONE').each do |task| %>
+                <tr>
+                  <td><%= task.name %></td>
+                  <td><%= task.description %></td>
+                  <td><%= task.visibility %></td>
+                  <td><%= link_to 'Show', task, class: 'btn btn-outline-success', style: 'background-color: purple; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='purple';" %></td>
+                  <% if can? :update, task %>
+                    <td><%= link_to 'Edit', edit_task_path(task), class: 'btn btn-outline-success', style: 'background-color: blue; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='blue';" %></td>
+                  <% end %>
+                  <% if can? :destroy, task %>
+                    <td><%= button_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-success', style: 'background-color: red; color: white;', onmouseover: "this.style.backgroundColor='purple';", onmouseout: "this.style.backgroundColor='red';" %></td>
+                  <% end %>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<% else %>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="card-body text-center">
+              <div class="card">
+                <h3 class="card-title mt-4"><div class="card"> <div class="red-background">Public Tasks</div></div></h3>
+              </div>
+              <table class="table">
+                <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Status</th>
+                </tr>
+                </thead>
+                <tbody>
+                <% @public_tasks.each do |task| %>
+                  <tr>
+                    <td><%= task.name %></td>
+                    <td><%= task.description %></td>
+                    <td><%= task.status %></td>
+                  </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 ">
+          <div class="card">
+            <div class="card-body text-center">
+              <h3 class="card-title mt-4">
+                <div class="card">
+                  <div class="rede-background">Log in !</div>
+                </div>
+              </h3>
+            </div>
+          </div>
+        </div>
 
-  <h2>DONE List</h2>
-  <table>
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-    </thead>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">
+              <h3 class="card-title mt-4">
+                <div class="card">
+                  <div class="ye-background">Create a TASK !</div>
+                </div>
+              </h3>
+            </div>
+          </div>
+        </div>
 
-    <tbody>
-    <% @my_tasks.where(status: 'DONE').each do |task| %>
-      <tr>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= task.visibility %></td>
-
-        <td><%= link_to 'Show', task %></td>
-        <% if can? :update, task %>
-          <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <% end %>
-        <% if can? :destroy, task %>
-          <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-
-<% end %>
-
-<% if can? :create, Task %>
-  <%= link_to 'New Task', new_task_path %>
-<% end %>
+        <div class="col-md-4 ">
+          <div class="card">
+            <div class="card-body text-center">
+              <h3 class="card-title mt-4">
+                <div class="card">
+                  <div class="ge-background">Manage it !</div>
+                </div>
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<%end %>
+<div id="nTask"></div>
+<div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog" aria-labelledby="newTaskModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title text-center mx-auto" id="newTaskModalLabel">New Task</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div id="newTaskForm">
+        <%= render 'tasks/form', task: Task.new %>
+      </div>
+    </div>
+  </div>
+</div>
